--- a/style.css
+++ b/style.css
@@ -81,17 +81,55 @@ body {
    text-align: center;
 }
 
-.about-me .half-width h2 {
+.about-me .half-width h2,
+.recipies-title h2 {
    margin-bottom: 32px;
    font-size: 40px;
    font-weight: 700;
    color: #707070;
 }
 
-.about-me .half-width p {
+.about-me .half-width p,
+.recipies-title p,
+.my-recipies .half-width p {
    margin-bottom: 70px;
    font-size: 18px;
    font-weight: 400;
    color: #18191F;
    line-height: 32px;
+}
+
+.my-recipies {
+   padding: 72px 0;
+}
+
+.my-recipies .half-width {
+   padding: 30px;
+   border-radius: 45px;
+   box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.15);
+}
+
+.my-recipies .half-width:first-child {
+   margin-right: 20px;
+}
+
+.recipies-title {
+   margin: 0 25%;
+   text-align: center;
+}
+
+.recipies-title p,
+.my-recipies .half-width p {
+   margin-bottom: 30px;
+}
+
+.my-recipies .half-width img {
+   width: 100%;
+   margin-bottom: 20px;
+}
+
+.my-recipies .half-width h3 {
+   margin-bottom: 10px;
+   font-size: 28px;
+   font-weight: 800;
 }
