--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ body {
    color: #575757;
 }
 
-.hero-section .half-width h1 span {
+.hero-section .half-width h1 span,
+.footer-content h3 span {
    background: linear-gradient(88.33deg, #FBA24F -7.64%, #FF1E1E 145.94%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
@@ -163,4 +164,27 @@ body {
    width: 33.33%;
    display: grid;
    justify-content: center;
+}
+
+footer {
+   padding: 50px 0;
+   background-color: #0B0D17;
+   text-align: center;
+}
+
+.footer-content h3 {
+   margin-bottom: 37px;
+   font-size: 30px;
+   font-weight: 800;
+   color: #5B5B5B;
+}
+
+.footer-content h3 span {
+   color: #5B5B5B;
+}
+
+.footer-content p {
+   font-size: 16px;
+   font-weight: 400;
+   color: #ffffff;
 }
